--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Style.css">
     <meta name="viewport"
         content="width=device-width, user-scalable=no,initial-scale=1, maximum-scale=1.0,maximum-scale=1.0" />
-    <title>Document</title>
+    <title>Encriptador</title>
 </head>
 
 <body class="fondo">
